--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "tailwindcss": "^2.0.2"
     },
     "dependencies": {
+        "daisyui": "^1.10.0",
         "nightwind": "^1.1.12"
     }
 }
